--- a/index.html
+++ b/index.html
@@ -72,5 +72,36 @@
     </div>
 </section>
 <!------------------------------section1------------------------------------->
+<!------------------------------offer------------------------------------->
+<div class="offer">
+    <div class="special-offers">
+        <h2>SPECIAL OFFERS</h2>
+    </div>
+
+    <div class="box-offer flex">
+        <div class="product-preview">
+            <div class="rectangle">
+                <img class="images-offer" src="./images/offer/offer1.jpg" alt="photo1">
+            </div>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+           
+        </div>      
+        
+        <div class="product-preview">
+            <div class="rectangle">
+                <img class="images-offer" src="./images/offer/offer2.jpg" alt="photo1">
+            </div>
+            <h3>Nunc vel diam ut felis facilisis mollis in vel nisl..</h3>
+        </div>  
+
+        <div class="product-preview">
+            <div class="rectangle">
+                <img class="images-offer" src="./images/offer/offer3.jpg" alt="photo1">
+            </div>
+            <h3>Nunc vel diam ut felis facilisis mollis in vel nisl.</h3>
+        </div>  
+    </div>
+</div>
+<!------------------------------offer------------------------------------->
 </body>
 </html>
