--- a/index.html
+++ b/index.html
@@ -142,5 +142,83 @@
 
 </div>
 <!------------------------------about-us------------------------------------->
+<div class="why-us">
+    <span class="green-color">Why us</span>
+    <h1>What distinguishes our products?</h1>
+    <div class="containter flex">
+
+        <div class="rectangle-icon">
+            <i class="fas fa-cloud-sun-rain icon"></i>
+            <h3>Resistance to difficult weather conditions</h3>
+        </div>
+
+        <div class="rectangle-icon">
+            <i class="fas fa-star icon"></i>
+            <h3>The highest quality</h3>
+        </div>
+
+        <div class="rectangle-icon">
+            <i class="fas fa-hammer icon"></i>
+            <h3>Durability</h3>
+        </div>
+        
+        <div class="rectangle-icon">
+            <i class="fas fa-seedling icon"></i>
+            <h3>Fast and healthy plant growth</h3>
+        </div>
+    </div>
+</div>
+    <!------------------------------about-us------------------------------------->
+    <!------------------------------News------------------------------------>
+<div class="news">
+<div class="title-news"><h2>News</h2></div>
+<div class="grid-news">
+    <div class="grid-items-news">
+        <div class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+        <p>Nullam volutpat enim a massa eleifend,
+            vel convallis turpis dapibus.
+            Donec eu pulvinar nunc, a sagittis ipsum.
+            Praesent vel porta leo. Proin tincidunt ex in dolor dictum rhoncus.
+            Nam nec leo eleifend, porttitor felis sit amet, faucibus eros.
+            In in elit venenatis, porta metus eget, viverra nisi</p>
+            <button class="btn btn-grey">READ MORE</button>
+    </div>
+
+
+    <div class="grid-items-news">
+        <div class="caption">Donec ornare sapien libero, vitae vulputate est venenatis eget.</div>
+        <p>Proin tempor congue vehicula. Phasellus nunc velit, finibus eget sem eu,
+            consectetur malesuada elit. Curabitur dictum auctor magna,
+            ut pulvinar eros convallis id. Aenean tincidunt purus vel dapibus
+            ullamcorper. Pellentesque commodo convallis est, a dapibus urna dictum nec.
+            Nulla molestie, nisi a efficitur accumsan,</p>
+            <button class="btn btn-grey">READ MORE</button>
+    </div>
+
+    <div class="grid-items-news">
+        <div class="caption">Mauris volutpat dolor id tortor vehicula, vitae placerat nisi tempus.</div>
+        <p>In erat ipsum, porttitor non semper vel, convallis sed tellus.
+            Pellentesque vestibulum sem id purus varius, vitae viverra eros
+            eleifend. Praesent id mauris magna. Curabitur eu bibendum lectus,
+            vel venenatis elit. Nunc convallis enim justo, sed vulputate
+            ligula dapibus ac. Nullam semper nec erat sit amet consectetur.
+            Donec in metus at mauris sagittis lobortis.</p>
+            <button class="btn btn-grey">READ MORE</button>
+    </div>
+
+    <div class="grid-items-news">
+        <div class="caption">Pellentesque et enim eleifend, dignissim neque non.</div>
+        <p>Duis at nunc a tellus tristique consequat. Donec ornare ante nec
+            leo semper, quis dignissim turpis dapibus. Lorem ipsum dolor
+            sit amet, consectetur adipiscing elit. Interdum et malesuada
+            fames ac ante ipsum primis in faucibus. Etiam dignissim interdum
+            tortor non tristique. Phasellus lectus est, tincidunt at
+            sodales in, gravida eu est. </p>
+            <button class="btn btn-grey">READ MORE</button>
+    </div>
+
+</div>
+    <!------------------------------about-us------------------------------------->
+
 </body>
 </html>
