--- a/index.html
+++ b/index.html
@@ -149,22 +149,22 @@
 
         <div class="rectangle-icon">
             <i class="fas fa-cloud-sun-rain icon"></i>
-            <h3>Resistance to difficult weather conditions</h3>
+            <span>Resistance to difficult weather conditions</span>
         </div>
 
         <div class="rectangle-icon">
             <i class="fas fa-star icon"></i>
-            <h3>The highest quality</h3>
+            <span>The highest quality</span>
         </div>
 
         <div class="rectangle-icon">
             <i class="fas fa-hammer icon"></i>
-            <h3>Durability</h3>
+            <span>Durability</span>
         </div>
         
         <div class="rectangle-icon">
             <i class="fas fa-seedling icon"></i>
-            <h3>Fast and healthy plant growth</h3>
+            <span>Fast and healthy plant growth</span>
         </div>
     </div>
 </div>
@@ -172,6 +172,7 @@
     <!------------------------------News------------------------------------>
 <div class="news">
 <div class="title-news"><h2>News</h2></div>
+<div class="data">JAN 12</div>
 <div class="grid-news">
     <div class="grid-items-news">
         <div class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
