--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
 </div>
     <!------------------------------about-us------------------------------------->
     <!------------------------------video------------------------------------->
+     <div class="video-box">
+
         <div class="video flex">
             <div class="technology"><span class="green-color">Technologies and solutions</span>
             <h2>The new era of greenhouses</h2>
@@ -244,20 +246,62 @@
                 <video controls src="./images/video/Flower.mp4"></video>
             </div>
         </div>
+     </div>   
     <!------------------------------video------------------------------------->
 
 <!------------------------------footer------------------------------------->
+    
+<div class="footer">
     <div class="footer-box flex">
-        <div class="mini-logo">
+        <div class="footer-column mini-logo">
             <img src="./images/logo.jpg" alt="mini-logo">
             <div class="logo-item"><span class="green-color">Eco</span>Life</div>
         </div>
-        <div class="shortcuts"></div>
-        <div class="products"></div>
-        <div class="shop"></div>
-        <div class="social"></div>
+        <div class="footer-column">
+           <span class="title-footer">SHORTCUTS</span> 
+            <ul class="footer-list">
+                <li class="footer-list"><a href="#">Start</a></li>
+                <li class="footer-item"><a href="#">About us</a></li>
+                <li class="footer-item"><a href="#">Advantages</a></li>
+                <li class="footer-item"><a href="#">Our products</a></li>
+                <li class="footer-item"><a href="#">Installation of greenhouses</a></li>
+                <li class="footer-item"><a href="#">Realizations</a></li>
+                <li class="footer-item"><a href="#">News</a></li>
+                <li class="footer-item"><a href="#">FAQ</a></li>
+                <li class="footer-item"><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <span class="title-footer">PRODUCTS</span>
+            <ul class="footer-list">
+                <li class="footer-item"><a href="#">Greenhouses</a></li>
+                <li class="footer-item"><a href="#">Swings and rockers</a></li>
+                <li class="footer-item"><a href="#">Sheds and gazebos</a></li>
+                <li class="footer-item"><a href="#">Accessories</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <span class="title-footer">SHOP</span>
+            <ul class="footer-list">
+                <li class="footer-item"><a href="#">Shop rules</a></li>
+                <li class="footer-item"><a href="#">Privacy policy</a></li>
+                <li class="footer-item"><a href="#">How to buy in installments</a></li>
+                <li class="footer-item"><a href="#">News</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <div class="social-box">
+                <a href="#"><i class="fab fa-facebook social"></i></a>
+            </div>
+            <div class="social-box">
+                <a href="#"><i class="fab fa-youtube social"></i></a>
+            </div>
+        </div>
 
     </div>
+
+</div>
+
 <!------------------------------footer------------------------------------->
 
 
