--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         
         <div class="rectangle-icon">
             <i class="fas fa-seedling icon"></i>
-            <span>Fast and healthy plant growth</span>
+            <span> Healthy growth</span>
         </div>
     </div>
 </div>
